fix: change height always out of viewport

--- a/src/components/ItemTable/ItemTable.css
+++ b/src/components/ItemTable/ItemTable.css
@@ -1,6 +1,6 @@
 .item-table {
     width: 48vw;
-    height: 76vh;
+    height: 72vh;
     margin: auto;
     overflow-y: auto;
     overflow-x: hidden;
